--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,32 @@
-*{
+* {
   margin: 0;
   /* padding: 0; */
+}
+body {
+  background-color: #f5f6fa;
+}
+.app__header {
+  display: flex;
+  margin-bottom: 20px;
+  justify-content: space-between;
+}
+.app__stats {
+  display: flex;
+  justify-content: space-between;
+}
+.app {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #f5f6fa;
+  padding: 20px;
+}
+
+.app__left {
+  flex: 0.9;
+}
+
+@media (max-width: 990px) {
+  .app {
+    flex-direction: column;
+  }
 }
